--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
                     <img src="assets/me.jpg" class="img-fluid rounded-circle" alt="me" style="max-width: 300px;">
                 </div>
             </div>
-        </div>        
-            <h1>MOK CONG YAO</h1>
-            <h4>BSc (Information Systems) Undergraduate @ SMU | Aspiring Full-Stack Web Developer</h4>
-            <p>Part-time freaky rizzler</p>
         </div>
+            <h1>MOK CONG YAO</h1>
+            <h6 id="dynamic-content" class="typing-effect"></h6>
+            <!-- <p id="dynamic-content" class="typing-effect"></p> -->
     </header>
     <div class="text-center" id="portfolio">
         <h2>PORTFOLIO</h2>
@@ -202,6 +201,7 @@
         </div>
     </div>
 
+<script src="script.js"></script>
 <script src="scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
