--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 
     </style>
 </head>
-<body id="page-top">
-    <nav style="background-color: #684536" class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav">
+<body id="page-top" class="text-lowercase">
+    <nav style="background-color: #684536" class="navbar navbar-expand-lg fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#page-top">Who am I?</a>
+            <a class="navbar-brand" href="#page-top">who am i?</a>
             <button class="navbar-toggler rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <img src="assets/menu.png" width="30px" height="35px" />
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">portfolio</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">about</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">contact</a></li>
                 </ul>
             </div>
         </div>
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div>
-            <h1>MOK CONG YAO</h1>
+            <h1>mok cong yao</h1>
             <h6 id="dynamic-content" class="typing-effect"></h6>
             <!-- <p id="dynamic-content" class="typing-effect"></p> -->
     </header>
