updated more code

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <img src="assets/notetaking.png" class="img-fluid rounded-circle mb-3" width="362" height="362" alt="Note Taking Web App">
                             <h5 class="card-title mb-3">Note Keeping Web Application</h5>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                Find out more
+                                find out more
                             </button>
                             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered">
@@ -64,7 +64,7 @@
                                             Frontend of a simple note keeping web application created with React.js and Next.js while using Git as my version control.
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">close</button>
                                             <a href="https://github.com/jordianojr/multi-keeper" target="_blank" class="btn btn-info">Github Repo</a>
                                         </div>
                                     </div>
@@ -80,7 +80,7 @@
                             <img src="assets/simon.png" class="img-fluid rounded-circle mb-3" width="300" height="300" alt="Simon Game">
                             <h5 class="card-title mb-3">Simon Game</h5>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Modal2">
-                                Find out more
+                                find out more
                             </button>
                             <div class="modal fade" id="Modal2" tabindex="-1" aria-labelledby="ModalLabel2" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered">
@@ -93,7 +93,7 @@
                                             A simple sequence memorizing game created using HTML, CSS, and Javascript.
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">close</button>
                                             <a href="https://github.com/jordianojr/SimonGame" target="_blank" class="btn btn-info">Github Repo</a>
                                             <a href="https://jordianojr.github.io/SimonGame/" target="_blank" class="btn btn-primary">Try the Game</a>
                                         </div>
@@ -113,10 +113,10 @@
             <div class="row mb-3">
                 <div class="col-md-4"></div>
                 <div class="col-md-2">
-                    <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample1" aria-expanded="false" aria-controls="multiCollapseExample1">Introduction</button>
+                    <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample1" aria-expanded="false" aria-controls="multiCollapseExample1">introduction</button>
                 </div>
                 <div class="col-md-2">
-                    <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Awards</button>
+                    <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">awards</button>
                 </div>
                 <div class="col-md-4"></div>
             </div>
@@ -124,10 +124,10 @@
             <div class="row mb-3">
                 <div class="col-md-4"></div>
                 <div class="col-md-2">
-                    <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample3" aria-expanded="false" aria-controls="multiCollapseExample3">Skills</button>
+                    <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample3" aria-expanded="false" aria-controls="multiCollapseExample3">skills</button>
                 </div>
                 <div class="col-md-2">
-                    <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample4" aria-expanded="false" aria-controls="multiCollapseExample4">Experience</button>
+                    <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample4" aria-expanded="false" aria-controls="multiCollapseExample4">experience</button>
                 </div>
                 <div class="col-md-4"></div>
             </div>
