updated codes & added resume

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">portfolio</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">about</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">contact</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="assets/RESUME.pdf">resume</a></li>
                 </ul>
             </div>
         </div>
@@ -169,15 +170,11 @@
                         <div class="card card-body">
                             <strong>Administrative Executive @ Singapore Management University</strong>
                             Mar 2023 - Jul 2023 <br>
-                            • Coordinated and hosted admissions interview between faculty and prospective students <br>
-                            • Cold calling to encourage applicants to complete a post-application survey, resulting in 79% completion rate <br>
                             <strong>Singapore Civil Defence Force</strong>
                             Platoon Commander <br>
                             Jul 2022 - Feb 2023 <br>
-                            • Initiated exercise of collecting feedback forms using Google Forms during enlistment events and processed data from hundreds of responses into a comprehensible PowerPoint for After Action Review. <br>
                             Community Preparedness Officer <br>
                             Jan 2022 - Jul 2022 <br>
-                            • Liaised with local constituency party members and organised commendation ceremonies for member of public responded to first aid cases in community.
                         </div>
                     </div>
                 </div>
