update some codes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class="card-body">
                             <img src="assets/notetaking.png" class="img-fluid rounded-circle mb-3" width="362" height="362" alt="Note Taking Web App">
                             <h5 class="card-title mb-3">Note Keeping Web Application</h5>
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            <button type="button" class="btn btn-earth" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 find out more
                             </button>
                             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -80,7 +80,7 @@
                         <div class="card-body">
                             <img src="assets/simon.png" class="img-fluid rounded-circle mb-3" width="300" height="300" alt="Simon Game">
                             <h5 class="card-title mb-3">Simon Game</h5>
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Modal2">
+                            <button type="button" class="btn btn-earth" data-bs-toggle="modal" data-bs-target="#Modal2">
                                 find out more
                             </button>
                             <div class="modal fade" id="Modal2" tabindex="-1" aria-labelledby="ModalLabel2" aria-hidden="true">
@@ -114,10 +114,10 @@
             <div class="row mb-3">
                 <div class="col-md-4"></div>
                 <div class="col-md-2">
-                    <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample1" aria-expanded="false" aria-controls="multiCollapseExample1">introduction</button>
+                    <button class="btn btn-earth d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample1" aria-expanded="false" aria-controls="multiCollapseExample1">introduction</button>
                 </div>
                 <div class="col-md-2">
-                    <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">awards</button>
+                    <button class="btn btn-earth d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">awards</button>
                 </div>
                 <div class="col-md-4"></div>
             </div>
@@ -125,10 +125,10 @@
             <div class="row mb-3">
                 <div class="col-md-4"></div>
                 <div class="col-md-2">
-                    <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample3" aria-expanded="false" aria-controls="multiCollapseExample3">skills</button>
+                    <button class="btn btn-earth d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample3" aria-expanded="false" aria-controls="multiCollapseExample3">skills</button>
                 </div>
                 <div class="col-md-2">
-                    <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample4" aria-expanded="false" aria-controls="multiCollapseExample4">experience</button>
+                    <button class="btn btn-earth d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample4" aria-expanded="false" aria-controls="multiCollapseExample4">experience</button>
                 </div>
                 <div class="col-md-4"></div>
             </div>
@@ -168,7 +168,8 @@
                 <div class="col">
                     <div class="collapse multi-collapse" id="multiCollapseExample4">
                         <div class="card card-body">
-                            <strong>Administrative Executive @ Singapore Management University</strong>
+                            <strong>Singapore Management University</strong>
+                            Administrative Executive <br>
                             Mar 2023 - Jul 2023 <br>
                             <strong>Singapore Civil Defence Force</strong>
                             Platoon Commander <br>
@@ -199,7 +200,6 @@
     </div>
 
 <script src="script.js"></script>
-<script src="scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
