--- a/index.html
+++ b/index.html
@@ -138,14 +138,22 @@
                 <div class="col">
                     <div class="collapse multi-collapse" id="multiCollapseExample1">
                         <div class="card card-body">
+                        <table border="1">
+                            <tr> <td>
                             Zealous and ready to learn more about daily work of a Full-Stack Web Developer and processes hidden from naked eye, I will equip all my knowledge in programming, data management and soft skills to contribute to new and innovative ideas!
+                            </td></tr>
+                        </table>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="collapse multi-collapse" id="multiCollapseExample2">
                         <div class="card card-body">
-                            1st Runners-Up (Social Responsibility Track) @ hacksingapore 2024 by AngelHack
+                            <table border="1">
+                                <tr> <td>
+                                    1st Runners-Up (Social Responsibility Track) @ hacksingapore 2024 by AngelHack
+                                </td></tr>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -155,28 +163,58 @@
                 <div class="col">
                     <div class="collapse multi-collapse" id="multiCollapseExample3">
                         <div class="card card-body">
-                            Front-end Frameworks: Bootstrap | React.js | Next.js <br>
-                            Programming Languages: Python | JavaScript <br>
-                            Web Development: HTML | CSS <br>
-                            Backend Technologies: Node.js | Express.js <br>
-                            Templating Languages: EJS | PHP <br>
-                            Database: SQL (MySQL) <br>
-                            Microsoft Office Suite: Word, PowerPoint, Excel  <br>
-                            Graphic Design Tools: Canva | Figma <br>
+                            <table border="1">
+                                <tr> 
+                                    <th> Front-end Frameworks: </th>
+                                    <td> Bootstrap | React.js | Next.js </td>
+                                </tr>
+                                <tr> 
+                                    <th> Programming Languages: </th>
+                                    <td> Python | JavaScript </td>
+                                </tr>
+                                <tr> 
+                                    <th> Web Development: </th>
+                                    <td> HTML | CSS </td>
+                                </tr>
+                                <tr> 
+                                    <th> Backend Technologies: </th>
+                                    <td> Node.js | Express.js </td>
+                                </tr>
+                                <tr> 
+                                    <th> Templating Languages: </th>
+                                    <td> EJS | PHP </td>
+                                </tr>
+                                <tr> 
+                                    <th> Database: </th>
+                                    <td> SQL (MySQL) </td>
+                                </tr>
+                                <tr> 
+                                    <th> Microsoft Office Suite: </th>
+                                    <td> Word, PowerPoint, Excel </td>
+                                </tr>
+                                <tr> 
+                                    <th> Graphic Design Tools: </th>
+                                    <td> Canva | Figma </td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="collapse multi-collapse" id="multiCollapseExample4">
                         <div class="card card-body">
-                            <strong>Singapore Management University</strong>
-                            Administrative Executive <br>
-                            Mar 2023 - Jul 2023 <br>
-                            <strong>Singapore Civil Defence Force</strong>
-                            Platoon Commander <br>
-                            Jul 2022 - Feb 2023 <br>
-                            Community Preparedness Officer <br>
-                            Jan 2022 - Jul 2022 <br>
+                            <table border="1">
+                                <tr> <td>
+                                <strong>Singapore Management University</strong>
+                                Administrative Executive <br>
+                                Mar 2023 - Jul 2023 <br>
+                                <strong>Singapore Civil Defence Force</strong>
+                                Platoon Commander <br>
+                                Jul 2022 - Feb 2023 <br>
+                                Community Preparedness Officer <br>
+                                Jan 2022 - Jul 2022 <br>
+                                </td></tr>
+                            </table>
                         </div>
                     </div>
                 </div>
