--- a/index.html
+++ b/index.html
@@ -219,6 +219,116 @@
                     </div>
                 </div>
             </div>
+            <section class="container" style="padding-top: 10px;">
+                <div class="row">
+                    <div class="col-lg-3" >
+                        <div class="card">
+                            <div class="card-body1">
+                                <h5 class="card-title">my jam</h5>
+                                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DXdyjMX5o2vCq?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="card">
+                            <div class="card-body1">
+                                <h5 class="card-title">my bikes</h5>
+                                <p>
+                                    <ul>
+                                        <li>
+                                            cb400 super bold'or
+                                        </li>
+                                        <li>
+                                            fz16st
+                                        </li>
+                                    </ul>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="card">
+                            <div class="card-body1">
+                                <h5 class="card-title">fashion interest brands</h5>
+                                <p>
+                                    <ul>
+                                        <li>
+                                            stussy
+                                        </li>
+                                        <li>
+                                            carhartt wip
+                                        </li>
+                                        <li>
+                                            vivienne westwood
+                                        </li>
+                                        <li>
+                                            jnco
+                                        </li>
+                                        <li>
+                                            doc martens
+                                        </li>
+                                        <li>
+                                            essentials
+                                        </li>
+                                        <li>
+                                            adidas
+                                        </li>
+                                        <li>
+                                            bershka
+                                        </li>
+                                        <li>
+                                            homer
+                                        </li>
+                                        <li>
+                                            aime leon dore
+                                        </li>
+                                    </ul>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="card">
+                            <div class="card-body1">
+                                <h5 class="card-title">usual summer routine as a student working part-time</h5>
+                                <p>
+                                    <ul>
+                                        <li>
+                                            wake up at 7am
+                                        </li>
+                                        <li>
+                                            work at smu gym
+                                        </li>
+                                        <li>
+                                            self-learn during work
+                                        </li>
+                                        <li>
+                                            lunch from parklane caifan/turks kebab
+                                        </li>
+                                        <li>
+                                            continue working and learning
+                                        </li>
+                                        <li>
+                                            hit the gym
+                                        </li>
+                                        <li>
+                                            dinner at home (500g of chicken breast, 5 eggs, 1 avocado)
+                                        </li>
+                                        <li>
+                                            meal prep for next day
+                                        </li>
+                                        <li>
+                                            facetime with my girlfriend and unwind with a movie
+                                        </li>
+                                        <li>
+                                            sleep
+                                        </li>
+                                    </ul>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+            </section>
         </div>
                 
 
