--- a/coursereview.html
+++ b/coursereview.html
@@ -15,7 +15,7 @@
 <body id="page-top" class="text-lowercase">
     <nav style="background-color: #684536" class="navbar navbar-expand-lg fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#page-top">who am i?</a>
+            <a class="navbar-brand" href="#page-top">course review</a>
             <button class="navbar-toggler rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <img src="assets/menu.png" width="30px" height="35px" />
             </button>
@@ -33,13 +33,82 @@
             <h6 id="dynamic-content" class="typing-effect"></h6>
     </header>
 
-    <section class="container">
-        <div class="row">
-            <div class="col-lg-12">
+    <section class="container text-center" style="padding-top: 10px;">
+        <h4> y1 is core mods </h4>
+        <div class="row" style="padding-top: 10px;">
+            <div class="col-lg-3">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">is111</h5>
-                
+                        <h5 class="card-title">is111: intro to programming (discontinued)</h5>
+                        <p class="card-text">
+                            my first official encounter with programming. <br>
+                            basic programming concepts, using python.
+                            <ul>
+                                <li>difficulty: 3/5</li>
+                                <li>workload: 5/5</li>
+                                <li>content: 3/5</li>
+                                <li>overall: 4/5</li>
+                                <li>grade: b</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">is114: computing fundamentals</h5>
+                        <p class="card-text">
+                            my first official encounter with computing. <br>
+                            basic computing concepts. file management, and using the command line. network. microbit programming.
+                            <ul>
+                                <li>difficulty: 2/5</li>
+                                <li>workload: 4/5</li>
+                                <li>content: 3/5</li>
+                                <li>overall: 4/5</li>
+                                <li>grade: b+</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">is113: web application development 1</h5>
+                        <p class="card-text">
+                            basic web development concepts. html, php. sql. phpmyadmin.
+                            <ul>
+                                <li>difficulty: 2/5</li>
+                                <li>workload: 3/5</li>
+                                <li>content: 3/5</li>
+                                <li>overall: 4/5</li>
+                                <li>grade: a</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">is112: data management</h5>
+                        <p class="card-text">
+                            basic database concepts. entity relationship diagrams. logical database design. sql. physical storage & indexing.
+                            <ul>
+                                <li>difficulty: 3/5</li>
+                                <li>workload: 4/5</li>
+                                <li>content: 3/5</li>
+                                <li>overall: 4/5</li>
+                                <li>grade: a</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+           
 <script src="scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
