--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                                             hit the gym
                                         </li>
                                         <li>
-                                            dinner at home (500g of chicken breast, 5 eggs, 1 avocado)
+                                            dinner at home (500g of minced beef, 5 eggs, 1 avocado)
                                         </li>
                                         <li>
                                             meal prep for next day
