--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                             meal prep for next day
                                         </li>
                                         <li>
-                                            facetime with my girlfriend and unwind with a movie
+                                            facetime with my ldr girlfriend in oxford and unwind with a movie
                                         </li>
                                         <li>
                                             sleep
