--- a/coursereview.html
+++ b/coursereview.html
@@ -109,6 +109,61 @@
         </div>
     </section>
            
+    <section class="container text-center" style="padding-top: 10px;">
+        <h4> y2 s1 is core mods </h4>
+        <div class="row" style="padding-top: 10px;">
+            <div class="col-lg-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">is210: business process analysis & solutioning</h5>
+                        <p class="card-text">
+                            coming soon. if i survive this semester.
+                            <!-- <ul>
+                                <li>difficulty: 3/5</li>
+                                <li>workload: 5/5</li>
+                                <li>content: 3/5</li>
+                                <li>overall: 4/5</li>
+                                <li>grade: b</li>
+                            </ul> -->
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">is211: interaction design programming</h5>
+                        <p class="card-text">
+                            stay tuned. if i survive this semester.
+                            <!-- <ul>
+                                <li>difficulty: 2/5</li>
+                                <li>workload: 4/5</li>
+                                <li>content: 3/5</li>
+                                <li>overall: 4/5</li>
+                                <li>grade: b+</li>
+                            </ul> -->
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">is216: web application development 2</h5>
+                        <p class="card-text">
+                            wait out. if i survive this semester.
+                            <!-- <ul>
+                                <li>difficulty: 2/5</li>
+                                <li>workload: 3/5</li>
+                                <li>content: 3/5</li>
+                                <li>overall: 4/5</li>
+                                <li>grade: a</li>
+                            </ul> -->
+                        </p>
+                    </div>
+                </div>
+            </div>
+
 <script src="scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
