--- a/coursereview.html
+++ b/coursereview.html
@@ -48,7 +48,6 @@
                                 <li>workload: 5/5</li>
                                 <li>content: 3/5</li>
                                 <li>overall: 4/5</li>
-                                <li>grade: b</li>
                             </ul>
                         </p>
                     </div>
@@ -66,7 +65,6 @@
                                 <li>workload: 4/5</li>
                                 <li>content: 3/5</li>
                                 <li>overall: 4/5</li>
-                                <li>grade: b+</li>
                             </ul>
                         </p>
                     </div>
@@ -83,7 +81,6 @@
                                 <li>workload: 3/5</li>
                                 <li>content: 3/5</li>
                                 <li>overall: 4/5</li>
-                                <li>grade: a</li>
                             </ul>
                         </p>
                     </div>
@@ -100,7 +97,6 @@
                                 <li>workload: 4/5</li>
                                 <li>content: 3/5</li>
                                 <li>overall: 4/5</li>
-                                <li>grade: a</li>
                             </ul>
                         </p>
                     </div>
@@ -117,14 +113,13 @@
                     <div class="card-body">
                         <h5 class="card-title">is210: business process analysis & solutioning</h5>
                         <p class="card-text">
-                            coming soon. if i survive this semester.
-                            <!-- <ul>
+                            as-is modelling. to-be modelling. business process re-engineering. business process improvement. business process simulation. business process automation.
+                            <ul>
                                 <li>difficulty: 3/5</li>
                                 <li>workload: 5/5</li>
-                                <li>content: 3/5</li>
+                                <li>content: 5/5</li>
                                 <li>overall: 4/5</li>
-                                <li>grade: b</li>
-                            </ul> -->
+                            </ul>
                         </p>
                     </div>
                 </div>
@@ -134,14 +129,13 @@
                     <div class="card-body">
                         <h5 class="card-title">is211: interaction design programming</h5>
                         <p class="card-text">
-                            stay tuned. if i survive this semester.
-                            <!-- <ul>
-                                <li>difficulty: 2/5</li>
-                                <li>workload: 4/5</li>
-                                <li>content: 3/5</li>
-                                <li>overall: 4/5</li>
-                                <li>grade: b+</li>
-                            </ul> -->
+                            ui/ux design. figma. iterative prototyping. nielsen's heuristics. usability testing. 
+                            <ul>
+                                <li>difficulty: 3/5</li>
+                                <li>workload: 5/5</li>
+                                <li>content: 5/5</li>
+                                <li>overall: 3/5</li>
+                            </ul>
                         </p>
                     </div>
                 </div>
@@ -151,14 +145,13 @@
                     <div class="card-body">
                         <h5 class="card-title">is216: web application development 2</h5>
                         <p class="card-text">
-                            wait out. if i survive this semester.
-                            <!-- <ul>
+                            css. javascript. node.js. vuejs. firebase. google cloud platform. 
+                            <ul>
                                 <li>difficulty: 2/5</li>
-                                <li>workload: 3/5</li>
-                                <li>content: 3/5</li>
-                                <li>overall: 4/5</li>
-                                <li>grade: a</li>
-                            </ul> -->
+                                <li>workload: 5/5</li>
+                                <li>content: 4/5</li>
+                                <li>overall: 3/5</li>
+                            </ul>
                         </p>
                     </div>
                 </div>
