--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
                                 <div class="modal-dialog modal-dialog-centered">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h1 class="modal-title fs-5 text-center" id="exampleModalLabel">Note Keeping Web Application</h1>
+                                            <h1 class="modal-title fs-5 text-center" id="exampleModalLabel">Fact Check Application</h1>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                            Frontend of a simple note keeping web application created with React.js and Next.js while using Git as my version control.
+                                            Misinformation detector that we created for the HacX Hackathon 2024. This application is able to detect misinformation in articles and provide users with a summary of the article. Absorbed by HTX.
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">close</button>
-                                            <a href="https://github.com/jordianojr/multi-keeper" target="_blank" class="btn btn-info">Github Repo</a>
+                                            <a href="https://github.com/Siyan-G/HacX-Hackathon" target="_blank" class="btn btn-info">Github Repo</a>
                                         </div>
                                     </div>
                                 </div>
@@ -80,7 +80,7 @@
                     <div class="card" style="background-color: #ECC1B2;">
                         <div class="card-body">
                             <img src="assets/simon.png" class="img-fluid rounded-circle mb-3" width="300" height="300" alt="Simon Game">
-                            <h5 class="card-title mb-3">Simon Game</h5>
+                            <h5 class="card-title mb-3">Thrift Thrive</h5>
                             <button type="button" class="btn btn-earth" data-bs-toggle="modal" data-bs-target="#Modal2">
                                 find out more
                             </button>
@@ -92,12 +92,12 @@
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                            A simple sequence memorizing game created using HTML, CSS, and Javascript.
+                                            An all in one platform for thrift and fashion, encouraging thrifting culture through marketplaces, editorials and an interactable map showing upcoming thrifting events. This platform caters to both buyers and sellers of fashion.
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">close</button>
-                                            <a href="https://github.com/jordianojr/SimonGame" target="_blank" class="btn btn-info">Github Repo</a>
-                                            <a href="https://jordianojr.github.io/SimonGame/" target="_blank" class="btn btn-primary">Try the Game</a>
+                                            <a href="https://github.com/jordianojr/thrift-thrive" target="_blank" class="btn btn-info">Github Repo</a>
+                                            <a href="https://thriftthrive-a28e7.web.app/login" target="_blank" class="btn btn-primary">Try the Game</a>
                                         </div>
                                     </div>
                                 </div>
